// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getItemsData вернет набор васов для бу 1`] = `
Array [
  "fresh",
  "spec",
  "turbo",
  "premium",
  "sticker",
  "favorite",
]
`;

exports[`getItemsData вернет набор васов для бу аукцион 1`] = `
Array [
  "auc",
  "spec",
  "sticker",
  "favorite",
]
`;
